# 4bar

./: BIO_Framework_Compendium.docx  README.md  application_cases.tex  cognate_finder.py  first_approach.md  methodology.tex  pyproject.toml  visualization.py
bio-framework/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
bio-framework/analysis/: __init__.py  sweeps.py
bio-framework/applications/: __init__.py
bio-framework/applications/structural/: families.py
bio-framework/src/biopt/: __init__.py  bilevel.py  distance.py  families.py  optimizers.py  pair.py  residual.py  sampling.py
bio-framework/tests/: conftest.py  test_structural.py
examples/: analytical_example_1.py  analytical_example_2.py  optimization_example_1.py  optimization_example_2.py  optimization_example_3.py
src/robchev/: __init__.py  analytical.py  kinematics.py  optimization.py  visualization.py
src/robchev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
