[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BIOpt"
version = "0.1.0"
description = "Bilevel Isoperformance Optimization for Engineering Design Equivalence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Victor Alulema", email = "victor.alulema@epn.edu.ec"},
]
keywords = [
    "bilevel optimization",
    "isoperformance",
    "engineering design",
    "equivalent designs",
    "parameterization families",
    "shape-space",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "flake8", "black", "isort"]
cmaes = ["cma>=3.3"]
all = ["BIOpt[dev,cmaes]"]

[project.urls]
Homepage = "https://github.com/victor-alulema/BIOpt"
Documentation = "https://github.com/victor-alulema/BIOpt#readme"
Repository = "https://github.com/victor-alulema/BIOpt"
Issues = "https://github.com/victor-alulema/BIOpt/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["biopt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
