[metadata]
name = BIOpt
version = attr: biopt.__version__
description = Bilevel Isoperformance Optimization for Engineering Design Equivalence
long_description = file: README.md
long_description_content_type = text/markdown
author = Victor Alulema
author_email = victor.alulema@epn.edu.ec
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    numpy>=1.24
    scipy>=1.10
    matplotlib>=3.7

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    flake8
    black
    isort
cmaes =
    cma>=3.3
all =
    BIOpt[dev,cmaes]

[options.packages.find]
where = src
include = biopt*
